[tool.poetry]
name = "pybip39"
version = "0.1.0"
description = "Python binding to tiny-bip39, the Rust case conversion library"
authors = ["kevinheavey <kevinheavey123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
maturin = "^0.12.6"
black = "^21.12b0"
mypy = "^0.930"
pytest = "^6.2.5"
flake8 = "^4.0.1"
Sphinx = "^4.3.2"
sphinx-rtd-theme = "^1.0.0"
bump2version = "^1.0.1"

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"


[project]
name = "pybip39"
version = "0.1.0"
description = "Python binding to tiny-bip39, the Rust case conversion library"
authors = [ {name = "kevinheavey", email = "kevinheavey123@gmail.com"} ]
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]


[project.urls]
homepage = "https://github.com/kevinheavey/pybip39"
documentation = "https://kevinheavey.github.io/pybip39/"
repository = "https://github.com/kevinheavey/pybip39"
changelog = "https://github.com/kevinheavey/pybip39/blob/main/CHANGELOG.md"